Jupyter notebook for teaching purposes updated Aug 16

--- a/localmag.ipynb
+++ b/localmag.ipynb
@@ -101,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -325,7 +327,7 @@
     "    stalon = inv.networks[0].stations[0].longitude\n",
     "    evelat = cat[0].origins[0].latitude\n",
     "    evelon = cat[0].origins[0].longitude\n",
-    "    dist = gps2dist_azimuth(stalat, stalon, evelat, evelon )[0] / 1000 # distance in meters\n",
+    "    dist = gps2dist_azimuth(stalat, stalon, evelat, evelon )[0] / 1000 # distance in kilometers\n",
     "    magl = log10(disp) + 2.56 * log10(dist) - 1.67\n",
     "    print(\"displacement =\",disp,\", distance =\",dist,\", local mag =\",magl)\n",
     "    ms += magl\n",
