--- a/localmag.ipynb
+++ b/localmag.ipynb
@@ -305,8 +305,7 @@
       "displacement = 13.1302136143 , distance = 44.62745650628028 , local mag = 3.671253258271914\n",
       "waveforms/IM.TKL..BHE__20200120T191201Z__20200120T191711Z.mseed stations/IM.TKL.xml\n",
       "displacement = 13.6071651884 , distance = 88.69248944279852 , local mag = 4.450357980155295\n",
-      "\n",
-      " average magnitude = 4.035148846440079\n"
+      "\n"
      ]
     }
    ],
@@ -330,9 +329,7 @@
     "    dist = gps2dist_azimuth(stalat, stalon, evelat, evelon )[0] / 1000 # distance in kilometers\n",
     "    magl = log10(disp) + 2.56 * log10(dist) - 1.67\n",
     "    print(\"displacement =\",disp,\", distance =\",dist,\", local mag =\",magl)\n",
-    "    ms += magl\n",
-    "    n += 1\n",
-    "print (\"\\n average magnitude =\", ms/n)"
+    "print ()"
    ]
   },
   {
