--- a/localmag.ipynb
+++ b/localmag.ipynb
@@ -329,6 +329,8 @@
     "    dist = gps2dist_azimuth(stalat, stalon, evelat, evelon )[0] / 1000 # distance in kilometers\n",
     "    magl = log10(disp) + 2.56 * log10(dist) - 1.67\n",
     "    print(\"displacement =\",disp,\", distance =\",dist,\", local mag =\",magl)\n",
+    "    ms += magl\n",
+    "    n += 1\n",
     "print ()"
    ]
   },
